syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "GrpcEvitaDataTypes.proto";

// Upsert associatedData mutation will either update existing associatedData or create new one.
message GrpcUpsertAssociatedDataMutation {
  // Unique name of the associatedData. Case-sensitive. Distinguishes one associated data item from another within
  // single entity instance.
  string associatedDataName = 1;
  // Contains locale in case the associatedData is locale specific.
  GrpcLocale associatedDataLocale = 2;
  // New value of this associated data. Data type is expected to be the same as in schema or must be explicitly
  // set via `valueType`.
  GrpcEvitaAssociatedDataValue associatedDataValue = 3;
}

// Remove associated data mutation will drop existing associatedData - ie.generates new version of the associated data
// with tombstone on it.
message GrpcRemoveAssociatedDataMutation {
  // Unique name of the associatedData. Case-sensitive. Distinguishes one associated data item from another within
  // single entity instance.
  string associatedDataName = 1;
  // Contains locale in case the associatedData is locale specific.
  GrpcLocale associatedDataLocale = 2;
}